--- a/ollama-docker/docker-compose.yml
+++ b/ollama-docker/docker-compose.yml
@@ -16,7 +16,8 @@ services:
       - ollama-docker
 
   ollama:
-    image: ollama/ollama:latest
+    build: ./ollama
+    #image: ollama/ollama:latest
     ports:
       - 11434:11434
     volumes:
