ADD: development of knower with docker

--- a/ollama-docker/docker-compose.yml
+++ b/ollama-docker/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     ports:
       - 5000:5000
     volumes:
-      - .:/code/knower
+      - ./knower:/usr/app
+    command: npm run dev
     networks:
       - ollama-docker
   app:
