--- a/ollama-docker/knower/Dockerfile
+++ b/ollama-docker/knower/Dockerfile
@@ -1,10 +1,8 @@
 # This is a dockerfile for the knower app
 FROM node:latest
-
-WORKDIR /knower
-COPY package*.json ./
+WORKDIR /usr/app/
+COPY package.json /usr/app/
 RUN npm install
 COPY . .
 EXPOSE 5000
 # run dev in port 5000
-CMD npm run dev
